Fix layout issues

--- a/src/app/pages/contact/embedded.scss
+++ b/src/app/pages/contact/embedded.scss
@@ -19,7 +19,7 @@
         }
     }
 
-    button {
+    button:not(.clear-file) {
         @include button();
 
         &.primary {
